[package]
name = "dev-server"
description = "Local development server for testing agent builds without a full Orchestra deployment"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
warp = "0.3"
