[package]
name = "dev-server"
description = "Local development server for testing agent builds without a full Orchestra deployment"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.7", features = ["http1"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
