[package]
name = "hollowing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pe_resolve = { path = "../pe_resolve" }
string_crypt = { path = "../string_crypt" }
anyhow = { workspace = true }
rand.workspace = true
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "memoryapi",
    "winbase",
    "winnt",
    "libloaderapi",
    "wow64apiset",
    "handleapi",
    "synchapi",
    "errhandlingapi",
    "tlhelp32",
    "minwinbase",
    "basetsd",
] }
