[package]
name = "hollowing"
description = "Process hollowing, module stomping, and shellcode injection primitives for Windows"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pe_resolve = { path = "../pe_resolve" }
nt_syscall = { path = "../nt_syscall" }
string_crypt = { path = "../string_crypt" }
anyhow = { workspace = true }
rand.workspace = true
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
] }
