[package]
name = "junk_macro"
description = "Proc-macro for generating junk code sequences at compile time for binary diversification"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
# Used at compile time (proc-macro context) to generate per-build random junk
# values so every Orchestra binary has different static junk code.
rand = { version = "0.8", features = ["std", "std_rng"] }
