[package]
name = "launcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rand = "0.8"
common = { path = "../common" }
hollowing = { path = "../hollowing" }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.28", features = ["fs", "process"] }

[dev-dependencies]
tempfile = "3"
warp = "0.3"
assert_cmd = "2"
predicates = "3"
tokio = { workspace = true }
