[package]
name = "module_loader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
libloading = "0.8"
reqwest = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
libc = "0.2"
tracing = { workspace = true }
tempfile = "3.3"

[dev-dependencies]
tokio = { workspace = true }
