[package]
name = "module_loader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
libloading = "0.8"
reqwest = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
libc = "0.2"
tracing = { workspace = true }
tempfile = "3.3"
ed25519-dalek = { version = "2.1.0", optional = true }

[target.'cfg(windows)'.dependencies]
goblin = { version = "0.7" }
winapi = { version = "0.3", features = ["memoryapi", "libloaderapi", "winnt"] }

[features]
default = ["module-signatures"]
module-signatures = ["dep:ed25519-dalek"]
# Enable reflective PE loading on Windows (no temp file written to disk).
# Requires the Windows-only `goblin` + `winapi` dependencies declared above.
manual-map = []

[dev-dependencies]
tokio = { workspace = true }
