[package]
name = "module_loader"
description = "Dynamic module loading via memfd_create and manual mapping with reflective loading support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
libloading = "0.8"
sha2 = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
tracing = { workspace = true }
tempfile = "3.3"
ed25519-dalek = { version = "2.1.0", optional = true }

[target.'cfg(windows)'.dependencies]
goblin = { version = "0.8" }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
] }
pe_resolve = { path = "../pe_resolve" }
nt_syscall = { path = "../nt_syscall" }

[features]
default = ["module-signatures"]
module-signatures = ["dep:ed25519-dalek"]
# Reject a missing runtime `module_verify_key` instead of silently falling
# back to the compile-time `MODULE_SIGNING_PUBKEY` constant.  Enable in
# production builds to ensure every plugin load is validated against a key
# supplied by the operator rather than one baked into the binary.
strict-module-key = ["module-signatures"]
# Enable reflective PE loading on Windows (no temp file written to disk).
# Requires the Windows-only `goblin` + `windows-sys` dependencies declared above.
manual-map = []

[dev-dependencies]
tokio = { workspace = true }
