[package]
name = "nt_syscall"
description = "Direct NT syscall wrappers with SSN resolution for bypassing usermode API hooks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pe_resolve = { path = "../pe_resolve" }
anyhow = { workspace = true }
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "winnt",
    "ntdef",
    "basetsd",
] }
