[package]
name = "nt_syscall"
description = "Direct NT syscall wrappers with SSN resolution for bypassing usermode API hooks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pe_resolve = { path = "../pe_resolve" }
anyhow = { workspace = true }
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
] }
