[package]
name = "optimizer"
description = "x86-64 binary diversification engine: NOP insertion, instruction scheduling, substitution, and dead-code insertion"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
diversification = []
unsafe-runtime-rewrite = []

[dependencies]
goblin = { version = "0.7", default-features = false, features = ["elf64", "elf32", "pe64", "pe32", "mach64", "mach32", "endian_fd"] }
iced-x86 = { version = "1.20", default-features = false, features = ["std", "decoder", "encoder", "block_encoder", "instr_info"] }
anyhow = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
region = "3.0"
rand = "0.8"
sha2 = { workspace = true }
hkdf = { workspace = true }
memmap2 = "0.9.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "processthreadsapi", "libloaderapi"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "optimizer_benchmark"
harness = false
