[package]
name = "orchestra-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Orchestra Control Center — self-hosted management plane for enterprise device orchestration."

[[bin]]
name = "orchestra-server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { version = "0.7", features = ["ws", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
rustls = "0.23"
rcgen = "0.13"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
async-trait = "0.1"
futures-util = "0.3"
subtle = "2.5"
time = { version = "0.3", features = ["formatting"] }
tokio-rustls = "0.26.4"
bincode = "1.3.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tempfile = "3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

[features]
default = []
