[package]
name = "orchestra-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Orchestra Control Center — self-hosted management plane for enterprise device orchestration."

[[bin]]
name = "orchestra-server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
builder = { path = "../builder" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
axum = { version = "0.7", features = ["ws", "macros"] }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
rustls = { workspace = true }
rcgen = "0.14"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
toml = { workspace = true }
futures-util = "0.3"
subtle = "2.5"
tokio-rustls = { workspace = true }
bincode = { version = "2", features = ["serde"] }
tempfile = "3"
chrono = { version = "0.4.44", features = ["serde"] }
sha2 = { workspace = true }
hmac = "0.13"
hex = "0.4"
base64 = { workspace = true }
zeroize = "1"
rand = { workspace = true }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
rustls-pemfile = "2"
# Enable dangerous-tls so tests can use NoCertificateVerification.
common = { path = "../common", features = ["dangerous-tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.185"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Pipes", "Win32_System_IO", "Win32_Security"] }

[features]
default = []
# NOTE: Application-layer forward secrecy (X25519 ECDH) is now always
# enabled.  The `common::forward_secrecy` module is compiled
# unconditionally.  The old feature flag has been removed because it was
# a no-op stub that gated nothing.
