[package]
name = "payload-packager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
clap = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
