[package]
name = "payload-packager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
clap = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = "2.1.0"
rand = "0.8"
hkdf = "0.12"

[dev-dependencies]
libc = "0.2"
