[package]
name = "redirector"
description = "Traffic redirector for C2 relay chains with TLS termination and cover-content serving"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
toml = { workspace = true }
axum = { version = "0.7", features = ["http1"] }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
tower-http = { version = "0.5", features = ["cors"] }
# P2-09: Direct rustls dependency for building mTLS ServerConfig with
# client-certificate verification.
rustls = { version = "0.23.38", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2"
