[package]
name = "string_crypt"
description = "Compile-time string encryption proc-macros using Xoshiro256PlusPlus with split-seed key derivation"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
