[package]
name = "uefi-persistence"
description = "UEFI firmware-level persistence framework — NVRAM manipulation, ESP operations, EFI driver stub builder, and DXE runtime driver support for authorized red team engagements"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
sha2 = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
] }

[dev-dependencies]
tempfile = "3.27.0"
